fix: modal height and add overflow

--- a/static/css/entrance.css
+++ b/static/css/entrance.css
@@ -16,6 +16,11 @@
     max-width: 600px;
 }
 
+.modal-body.custom {
+    max-height: 600px;
+    overflow: auto;
+}
+
 .btn.custom {
     font-size: 16px;
     height: 26px;
